@@ -1,5 +1,6 @@
 v1.6.11 (04/05/2020) 
 - added giant.score_model after buster refinement
+- added field and capture of path to buster-reports in DB
 
 v1.6.10 (04/05/2020) 
 - bug fix: only read (2)fofc_twin.map during dimple_twin map review
